--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--Created by: Cy <3
 (aka: Marnie Tisdale)
 Date Created: 9/11/14
-Last Modified: 9/12/14
+Last Modified: 9/15/14
 
 Summary: example of a custom styled alert box containing a mortgage calculator based on user input to output monthly payments-->
 
@@ -52,8 +52,8 @@ Summary: example of a custom styled alert box containing a mortgage calculator b
                                 <div id="dialogboxbody"><!--dialog box body-->
                                     <table><!--contains calculator-->
                                         <tr>
-                                            <td><label for="principle">Loan Principle:</label></td>
-                                            <td><input name="principle" id="principle" type="text"/></td>
+                                            <td><label for="principal">Loan Principle:</label></td>
+                                            <td><input name="principal" id="principal" type="text"/></td>
                                         </tr>
                                         <tr>
                                             <td><label for="rate">Interest Rate:</label></td>
