--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@ Summary: example of a custom styled alert box containing a mortgage calculator b
     
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif|Karla|Merriweather+Sans:400,800' rel='stylesheet' type='text/css'>
     <!--^Google fonts import library-->
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <!--^bootstrap css for the style portion-->
-    <link rel="stylesheet" href="jquery-ui.css">
-    <!--^jQuery css import-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <!--^import bootstrap css-->
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
+    <!--^jQuery UI css import-->
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <!--^my stylesheet for "homegrown" css-->
     
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--^ jQuery import-->
-    <script src="jquery-ui.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <!--^ jQuery UI manipulation import-->
-    <script src="bootstrap.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <!--^ bootstraps js file import-->
     <script type="text/javascript" src="script.js"></script>
     <!--^ my JavaScript/jQuery file for index.html-->
@@ -72,7 +72,7 @@ Summary: example of a custom styled alert box containing a mortgage calculator b
                                             <td><input id="pmt" name="pmt" type="text"/></td>
                                         </tr>
                                     </table>
-                                    <p id="sub" >*This is an estimate only, results may vary based on personal credit</p> 
+                                    <p id="sub" >*This is an estimate only, results may vary based on personal credit options/down payments/etc.</p> 
                                 </div><!--box body-->
                                 <div id="dialogboxfoot"></div><!--box footer-->
                             </div>
